--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,5 @@
 #day1 {
-  text:"Day 1";
+  text:"Trip To Puerto Rico!";
 
   /* location: 1000px 650px; */
   background-color: transparent;
@@ -18,7 +18,7 @@
   fixed: true;
 }
 
-#day1 {
+#day2 {
   text:"Day 2";
 
   /* location: 1000px 650px; */
